--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: Abbazia di Nonantola
+description: A hidden treasure in the province of Modena 
 theme: jekyll-theme-cayman
